css/portland.css
/* ... */
@font-face {
  font-family: 'MuseoSansCyrlRegular';
  src: url("../fonts/museosanscyrl-500-webfont.eot");
  src: url("../fonts/museosanscyrl-500-webfont.eot?#iefix") format('embedded-opentype'), url("../fonts/museosanscyrl-500-webfont.woff") format('woff'), url("../fonts/museosanscyrl-500-webfont.ttf") format('truetype');
}
@font-face {
  font-family: 'MuseoSansCyrlLight';
  src: url("../fonts/museosanscyrl-300-webfont.eot");
  src: url("../fonts/museosanscyrl-300-webfont.eot?#iefix") format('embedded-opentype'), url("../fonts/museosanscyrl-300-webfont.woff") format('woff'), url("../fonts/museosanscyrl-300-webfont.ttf") format('truetype');
}
body,
html {
  height: 100%;
}
body {
  font: normal normal 16px/1.2 MuseoSansCyrlRegular;
  color: inherit;
  cursor: default;
}
.page {
  min-width: 1000px;
  max-width: 1920px;
  height: auto;
  min-height: 100%;
  background-attachment: fixed;
  -webkit-background-size: cover;
  -moz-background-size: cover;
  background-size: cover;
  background-repeat: no-repeat;
}
.page-inner {
  margin: 0 auto;
  padding: 0 140px 0 160px;
}
@media screen and (max-width: 1400px) {
  .page-inner {
    padding: 0 110px 0 140px;
  }
}
@media screen and (max-width: 1000px) {
  .page-inner {
    padding: 0 80px 0 120px;
  }
}
.page-content {
  padding-bottom: 315px;
}
@media screen and (max-width: 1400px) {
  .page-content {
    padding-bottom: 280px;
  }
}
@media screen and (max-width: 1000px) {
  .page-content {
    padding-bottom: 260px;
  }
}
.with-trimmed-footer .page-content {
  position: relative;
  padding-bottom: 150px;
}
.page-header {
  position: fixed;
  z-index: 5000;
  left: 0;
  top: 0;
  bottom: 0;
  display: block;
  width: 80px;
  overflow: hidden; /* fixing logo out of header when mouse over */
  background: #231f20 url("../i/menu_bg.png") repeat 0 0;
  -webkit-transition: width 0.2s ease-in;
  -moz-transition: width 0.2s ease-in;
  -o-transition: width 0.2s ease-in;
  -ms-transition: width 0.2s ease-in;
  transition: width 0.2s ease-in;
}
.page-header .page-header-inner {
  position: relative;
  padding-top: 55px;
}
.page-header .page-header-inner .page-header-logo-holder {
  max-width: 100%;
  overflow: hidden;
}
.page-header .page-header-inner .page-header-logo {
  margin: 0 auto 35px auto;
  display: block;
  width: 26px;
  height: 35px;
  background: url("../i/logo_small.png") no-repeat 0 0;
  text-decoration: none;
}
@media screen and (max-width: 1400px) {
  .page-header .page-header-inner .page-header-logo {
    margin-bottom: 30px;
  }
}
@media screen and (max-width: 1000px) {
  .page-header .page-header-inner .page-header-logo {
    margin-bottom: 25px;
  }
}
.page-header .page-header-inner .page-header-logo .page-header-logo-image {
  position: relative;
  top: -2px;
  display: none;
}
.page-header .page-header-inner .page-header-toggler {
  margin-bottom: 120px;
  display: block;
  padding: 10px 0;
  text-align: center;
  background-color: transparent;
  -webkit-transition: background-color 0.2s ease-in;
  -moz-transition: background-color 0.2s ease-in;
  -o-transition: background-color 0.2s ease-in;
  -ms-transition: background-color 0.2s ease-in;
  transition: background-color 0.2s ease-in;
/*&:hover
				background-color rgba(68, 57, 52, 0.7)*/
}
@media screen and (max-width: 1400px) {
  .page-header .page-header-inner .page-header-toggler {
    margin-bottom: 85px;
  }
}
@media screen and (max-width: 1000px) {
  .page-header .page-header-inner .page-header-toggler {
    margin-bottom: 50px;
  }
}
.page-header .page-header-inner .page-header-toggler .page-header-toggler-inner {
  color: transparent;
  text-indent: -9999px;
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder .page-header-menu-item {
  position: relative;
  display: block;
  height: 50px;
  padding-left: 70px;
  font: normal normal 12px/1 MuseoSansCyrlRegular;
  color: #b89e75;
  text-transform: uppercase;
  text-decoration: none;
  background-color: transparent;
  -webkit-transition: background-color 0.2s ease-in, padding-left 0.2s ease-in;
  -moz-transition: background-color 0.2s ease-in, padding-left 0.2s ease-in;
  -o-transition: background-color 0.2s ease-in, padding-left 0.2s ease-in;
  -ms-transition: background-color 0.2s ease-in, padding-left 0.2s ease-in;
  transition: background-color 0.2s ease-in, padding-left 0.2s ease-in;
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder .page-header-menu-item .page-header-menu-item-name {
  visibility: hidden;
  opacity: 0;
  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
  filter: alpha(opacity=0);
  white-space: nowrap;
  -webkit-transition: opacity 0.2s ease-in;
  -moz-transition: opacity 0.2s ease-in;
  -o-transition: opacity 0.2s ease-in;
  -ms-transition: opacity 0.2s ease-in;
  transition: opacity 0.2s ease-in;
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder .page-header-menu-item:before {
  position: absolute;
  left: 50%;
  top: 50%;
  margin: -15px 0 0 -15px;
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder .page-header-menu-item:hover {
  background-color: rgba(68,57,52,0.7);
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder .page-header-menu-item--current {
  background-color: rgba(68,57,52,0.7);
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder--submenu {
  position: relative;
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder--submenu:hover .page-header-menu-sub {
  display: block;
}
.page-header .page-header-inner .page-header-menu .page-header-menu-inner .page-header-menu-item-holder:hover .page-header-menu-item {
  background-color: rgba(68,57,52,0.7);
}
/* ... */

